# sentinel_e

./: .gitignore  BOUNDARY_INTEGRATION_SUMMARY.md  BOUNDARY_QUICK_REFERENCE.md  ENSEMBLE_EXECUTION_CONTRACT.md  IVR_SYSTEM_GUIDE.md  KNOWLEDGE_LEARNING_GUIDE.md  PR_OUTPUT.json  README.md  SENTINEL_E_PROVIDER_AUDIT_REPORT.md  _test_imports.py  _validate_openrouter_removal.py  _verify_refactor.py  collaborative_network_input.json  critical_thinking.py  debug_keys.py  debug_requests.py  dump.rdb  example_ivr_client.py  input_output_example.json  package-lock.json  package.json  sentinel_knowledge.json  test_boundaries.py  test_critical_thinking.py  test_input.json  test_knowledge_learning.py
backend/: AUTONOMOUS_REASONING_ENGINE.md  Dockerfile  REWRITE_PROGRESS.md  main.py  main_legacy.py  pyproject.toml  requirements.txt  risk_boundaries.py  run_sentinel_sigma_v4.py  sentinel_x_omega_cognitive.py  shadow_boundaries.py  test_deliberation.py  test_prompt_wiring.py
backend/analysis/: __init__.py  consensus_engine.py  metrics_engine.py  reasoning_analytics.py
backend/common/: ingestion.py  model_interface.py  utils.py
backend/compressed/: __init__.py  debate_engine.py  memory_store.py  model_clients.py  pipeline.py  report_generator.py  role_engine.py  search_engine.py  token_governor.py
backend/core/: __init__.py  aggregate.py  agreement_matrix.py  analysis.py  anchor_pass.py  behavioral_analytics.py  boundary_detector.py  cache_engine.py  cognitive_deliberance.py  cognitive_orchestrator.py  confidence_calibrator.py  confidence_engine.py  context_compiler.py  memory.py  (+40 more)
(+266 files in other folders)
