[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-e"
version = "5.0.0"
description = "Sentinel-E Cognitive System"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]
